# EZIO

./: .configure.ac.swp  Makefile.am  README.md  autogen.sh  configure.ac
src/: .Makefile.am.swp  .ezio.pc.in.swp  Makefile-LIBADD.inc  Makefile.am  ezio-test.pc.in  ezio.c  ezio.h  ezio.pc  ezio.pc.in  ezio_test_config  libezio.c  libezio.pc.in  main.c
